# search-engine

./: .gitignore  CMakeLists.txt  README.md
CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeDebug
Indexer/: CMakeLists.txt
Util/src/: CollectionReader.cpp
include/: CMakeLists.txt
lib/: CMakeLists.txt  CollectionReader.h  CollectionWriter.h
lib/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeDebug
lib/Project.xcodeproj/: project.pbxproj
lib/common/: CMakeLists.txt  doc_repository.cc  doc_repository.h  file.cc  file.h  graph.cc  graph.h  hit.cc  hit.h  page.cc  page.h  term.cc  term.h  term_occurrence.cc  term_occurrence.h  tokenizer.cc  tokenizer.h  util.cc  util.h  vocabulary.cc  vocabulary.h
lib/index/: CMakeLists.txt  index_file.cc  index_file.h  mapper.cc  mapper.h  merge.cc  merge.h  reducer.cc  reducer.h  run.cc  run.h  writer.cc  writer.h
lib/indexer/: Header.h
lib/riCode/: CMakeLists.txt  CollectionReader.cpp  CollectionWriter.cpp
lib/search/: CMakeLists.txt  CTestTestfile.cmake  model_combiner.cc  model_combiner.h  pagerank_model.cc  pagerank_model.h  ranking_model.cc  ranking_model.h  title_model.cc  title_model.h  url_model.cc  url_model.h  vector_space_model.cc  vector_space_model.h
lib/search/web-search-engine.build/Debug/search.build/: Script-7DE1DB4F234B40DC8FBB0612.sh  dgph
lib/search/web-search-engine.build/Debug/search.build/Objects-normal/x86_64/: search.LinkFileList
lib/search_engine.build/Debug/RICPlib.build/: dgph
lib/search_engine.build/Debug/RICPlib.build/Objects-normal/x86_64/: CollectionReader.d  CollectionReader.dia  CollectionWriter.d  Document.d  RICPlib.LinkFileList
search_engine.build/Debug/ALL_BUILD.build/: Script-17D2C3B4EBB44EC9B992013F.sh  dgph
search_engine.build/Debug/ZERO_CHECK.build/: Script-2A0597084CDB4B1DBDC89ED8.sh  dgph
search_engine.xcodeproj/: project.pbxproj
search_engine.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
search_engine.xcodeproj/project.xcworkspace/xcshareddata/: search_engine.xccheckout
search_engine.xcodeproj/project.xcworkspace/xcuserdata/felipemoraes.xcuserdatad/: UserInterfaceState.xcuserstate
search_engine.xcodeproj/xcuserdata/felipemoraes.xcuserdatad/xcschemes/: ALL_BUILD.xcscheme  RICPlib.xcscheme  ZERO_CHECK.xcscheme  indexer.xcscheme  xcschememanagement.plist
src/: CMakeLists.txt
src/evaluation/: CMakeLists.txt  main.cc
src/indexer/: CMakeLists.txt  indexer  main.cc
src/indexer/Debug/: indexer
src/indexer/search_engine.build/Debug/indexer.build/: dgph
src/indexer/search_engine.build/Debug/indexer.build/Objects-normal/x86_64/: indexer.LinkFileList  main.d  main.dia
src/processor/: CMakeLists.txt  main.cc
src/search_engine.build/Debug/indexer.build/: dgph
src/search_engine.build/Debug/indexer.build/Objects-normal/x86_64/: indexer.LinkFileList
src/searcher/: CMakeLists.txt  boolean_search.cc  boolean_search.h  main.cc
test/: test.cc  test_and.txt  test_or.txt
test/gtest-1.7.0/gtest.xcodeproj/: project.pbxproj
util/: evaluation.sh
util/stopwords/: spanish.txt
util/trec_eval/: trec_eval
util/trec_eval/trec_eval.dSYM/Contents/Resources/DWARF/: trec_eval
